--- a/src/ui/Button/Button.scss
+++ b/src/ui/Button/Button.scss
@@ -1,3 +1,5 @@
+@use '@/style/mixins' as *;
+
 .btn {
   border: none;
   outline: none;
@@ -17,11 +19,10 @@
   &--primary,
   &--icon {
     transition:
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-      color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+            background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+            color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
-    &:hover,
-    &:focus-visible {
+    @include hover-desktop {
       background-color: var(--btn-hover-color);
       color: var(--text-color-hover);
     }
@@ -30,7 +31,7 @@
   &--primary {
     background-color: var(--btn-primary-color);
 
-    &:disabled {
+    @include disabled {
       background-color: var(--btn-disabled-color-primary);
       color: var(--text-disabled-color);
       cursor: not-allowed;
@@ -44,8 +45,8 @@
     background-color: var(--btn-secondary-color);
     border: 1px solid var(--btn-secondary-border-color);
 
-    &:disabled {
-      background-color: var(----btn-disabled-color-secondary);
+    @include disabled {
+      background-color: var(--btn-disabled-color-secondary);
       color: var(--text-disabled-color);
     }
   }
@@ -68,15 +69,16 @@
       background: var(--border-link-color);
       opacity: 0;
       transition:
-        opacity 0.2s,
-        transform 0.2s;
+              opacity 0.2s,
+              transform 0.2s;
       transform: scaleX(0);
     }
 
-    &:hover::before,
-    &:focus-visible::before {
-      opacity: 1;
-      transform: scaleX(1);
+    @include hover-desktop {
+      &::before {
+        opacity: 1;
+        transform: scaleX(1);
+      }
     }
   }
 }
