--- a/src/ui/Input/Input.scss
+++ b/src/ui/Input/Input.scss
@@ -1,3 +1,5 @@
+@use '@/style/mixins' as *;
+
 .custom-input {
   display: flex;
   flex-direction: column;
@@ -9,6 +11,7 @@
   &::placeholder {
     color: var(--placeholder-color);
   }
+
   &__label {
     font-size: 14px;
     margin-bottom: 4px;
@@ -44,6 +47,19 @@
       right: 10px;
     }
   }
+
+  /* hover + focus-visible только для desktop */
+  &:not(.custom-input--error) {
+    @include hover-desktop {
+      .custom-input__icon {
+        color: #b4a9ff;
+      }
+
+      .input {
+        border-color: #b4a9ff;
+      }
+    }
+  }
 }
 
 .input {
@@ -74,6 +90,7 @@
 
 .custom-input--search {
   max-width: 665px;
+
   .custom-input__icon {
     color: var(--placeholder-color);
   }
@@ -91,16 +108,6 @@
   }
 }
 
-.custom-input:hover:not(.custom-input--error) .custom-input__icon,
-.custom-input:focus-visible:not(.custom-input--error) .custom-input__icon {
-  color: #b4a9ff;
-}
-
-.custom-input:hover:not(.custom-input--error) .input,
-.custom-input:focus-visible:not(.custom-input--error) .input {
-  border-color: #b4a9ff;
-}
-
 /* Chrome, Edge, Safari */
 .input[type='search']::-webkit-search-cancel-button,
 .input[type='search']::-webkit-search-decoration,
@@ -110,7 +117,7 @@
   appearance: none;
 }
 
-/* Firefox  */
+/* Firefox */
 .input[type='search'] {
   -moz-appearance: textfield;
 }
