--- a/src/ui/Link/Link.scss
+++ b/src/ui/Link/Link.scss
@@ -1,3 +1,5 @@
+@use '@/style/mixins' as *;
+
 .link {
   display: inline-flex;
   align-items: center;
@@ -18,20 +20,20 @@
     height: 1.5px;
     background: var(--border-link-color);
     opacity: 0;
-    transition:
-      opacity 0.2s,
-      transform 0.2s,
-      color 0.2s;
     transform: scaleX(0);
+    transition:
+            opacity 0.2s,
+            transform 0.2s;
   }
 
-  &:hover::before,
-  &:focus-visible::before {
-    opacity: 1;
-    transform: scaleX(1);
+  @include hover-desktop {
+    &::before {
+      opacity: 1;
+      transform: scaleX(1);
+    }
   }
 
-  &:active {
+  @include active {
     color: var(--active-link-color);
   }
 }
@@ -49,18 +51,18 @@
   font-size: 18px;
   line-height: 24px;
   transition:
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+          background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+          color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
-  &:hover,
-  &:focus {
+  @include hover-desktop {
     background-color: var(--btn-hover-color);
     color: var(--text-color-hover);
   }
 
-  &:disabled {
-    background-color: var(----btn-disabled-color-secondary);
+  @include disabled {
+    background-color: var(--btn-disabled-color-secondary);
     color: var(--text-disabled-color);
+    cursor: not-allowed;
   }
 }
 
@@ -83,16 +85,17 @@
     color: #000;
     opacity: 0;
     transition:
-      opacity 0.3s ease-in-out,
-      transform 0.3s ease-in-out;
+            opacity 0.3s ease-in-out,
+            transform 0.3s ease-in-out;
 
-    &:hover,
-    &:focus-visible {
+    @include hover-only {
       transform: scale(1.2);
     }
   }
 
-  &:hover .top-movie-card__remove {
-    opacity: 1;
+  @include hover-only {
+    .top-movie-card__remove {
+      opacity: 1;
+    }
   }
 }
